Corrected css spacing and formatting

--- a/src/Pages/CSS/PreferencesPage.css
+++ b/src/Pages/CSS/PreferencesPage.css
@@ -1,84 +1,17 @@
-.CreatePreferences {
-    display: flex;
-    width: 100%;
+.card-box {
+    width: 50rem;
+    max-width: 70rem;
     height: 100%;
+    margin: 0.5rem auto;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(255, 255, 255);
-    margin-top: 4em;
-  }
-  .tagBackground {
-    background-color: rgb(240, 247, 247);
-    width: 30vw;
-    height: 60vh;
-    border-radius: 1rem;
-    box-shadow: 0 9px 10px rgba(0,0,0,0.4);
-  }
-  .tagHolder {
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap ;
-    width: 100%;
-    height: 100%;
-    gap: 1vw;
     justify-content: center;
-    align-items: center;
-  }
-  .Names {
-    display: flex;
-    flex: 0 0 1;
-    flex-direction: row;
-    margin: auto;
-    margin-top: 5%;
-    flex-wrap: wrap;
-    width: 50vh;
-    height: 50%;
-    justify-content: center;
-    align-items: center;
-    border-radius: 1rem;
-    border: 1px solid rgb(148, 32, 129);
-  }
-  .card {
-    display: flex;
-    flex-direction: column;
-    width: 60vw;
-    height: 60vh;
-    background: rgb(255,255,255,0.3);
-    border-radius: 1rem;
-    box-shadow: 0 9px 10px rgba(0,0,0,0.4);
-  }
-  .Page {
-    margin-top: 1%;
-    display: flex;
-    flex-direction: row;
-    gap: 1vw;
-    width: 90vw;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(255, 255, 255);
-  }
-  .buttons {
-    display: flex;
-    flex-direction: row;
-    gap: 1vw;
-    width: 100%;
-    height: 10%;
-    justify-content: center;
-    align-items: center;
-  }
-  .Title {
-    display: flex;
-    flex-direction: row;
-    gap: 1vw;
-    width: 100%;
-    height: 10%;
-    justify-content: center;
-    align-items: center;
-  
-  }
-
+    transition: 0.5s;
+}
 .card-title{
     margin-top: 2em;
     text-align: center;
